--- a/css/style.css
+++ b/css/style.css
@@ -684,10 +684,10 @@ body {
   line-height: 1.75;
   font-size: 112.5%;
   color: #111;
-  overflow-x: hidden;
+  overflow-x: visible;
   margin: 0; }
   body p, body ul {
-    margin: 0 0 2rem; }
+    margin: 1rem; }
 
 ::-moz-selection {
   background: seagreen;
@@ -701,8 +701,8 @@ img, video, audio, iframe, object {
   max-width: 100%; }
 
 .container {
-  max-width: 610px;
-  padding: 0 20px; }
+  max-width: 1100px;
+  padding: 0 10px; }
 
 /***************
 LINK STYLING
@@ -867,7 +867,7 @@ POST STYLING
   font-weight: 300; }
 
 .post figure {
-  margin: 3rem 0; }
+  margin: 2rem 0; }
   .post figure figcaption {
     text-align: center;
     font-size: .5em;
@@ -1015,7 +1015,7 @@ POST LIST STYLING
   .posts li h3 {
     margin: 0 0 .5em; }
 
-@media only screen and (min-width: 800px) {
+@media only screen and (min-width: 1100px) {
   /***************
 GLOBAL STYLES
 ***************/
@@ -1038,7 +1038,7 @@ GLOBAL STYLES
       -webkit-transform-origin: bottom left;
       transform-origin: bottom left; }
   .container {
-    max-width: 800px;
+    max-width: 1100px;
     margin-left: auto;
     margin-right: auto;
     padding: 0;
