--- a/_includes/google_analytics.html
+++ b/_includes/google_analytics.html
@@ -1,4 +1,4 @@
-<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics }}"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
